# mpc-kali

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RUST_PORT.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  deny.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
docs/: PLUGIN_AUTHORING.md  PUBLISHING.md  USER_MANUAL.md
examples/: .env_mcp-kali.example  mcp-kali.conf  mcp-kali.conf.example  mcp-kali.config  mcp-kali.config.example  mcp-kali.system.conf.example
mcp_connectors/: README.md
mcp_connectors/scripts/: build-claude-desktop.sh  build-codex.sh
plugins/: capability-catalog.yaml
plugins/dnsrecon/: plugin.yaml
plugins/dnsrecon/references/: operator-boundaries.md  result-interpretation.md  safe-profiles.md
plugins/enum4linux/: plugin.yaml
plugins/enum4linux/references/: operator-boundaries.md  result-interpretation.md  safe-profiles.md
plugins/gobuster/: plugin.yaml
plugins/gobuster/references/: operator-boundaries.md  result-interpretation.md  safe-profiles.md
plugins/nikto/: plugin.yaml
plugins/nikto/references/: operator-boundaries.md  result-interpretation.md  safe-profiles.md
plugins/nmap/: plugin.yaml
plugins/nmap/references/: operator-boundaries.md  result-interpretation.md  safe-profiles.md
plugins/sqlmap/: plugin.yaml
plugins/sqlmap/references/: operator-boundaries.md  result-interpretation.md  safe-profiles.md
plugins/wpscan/: plugin.yaml
plugins/wpscan/references/: operator-boundaries.md  result-interpretation.md  (+1 more)
src/: analysis.rs  api.rs  config.rs  dashboard.html  jobs.rs  lib.rs  mcp.rs  models.rs  plugins.rs  references.rs
systemd/: mcp-kali.service.in
tests/: install_logging_templates.rs  logging.rs
(+11 files in other folders)
